# cuTPS

./: CMakeLists.txt  README.md  newConfig.txt  runAllTests.sh  todo.txt
3dconfigurations/: config3D.txt  config3DallOff.txt  config3DallOn.txt  config3Dcpu.txt  config3DcpuInter.txt  config3DerrorCheckAllOff.txt  config3DerrorCheckAllOn.txt  config3DerrorCheckCpu.txt  config3DerrorCheckOccupancy.txt  config3DerrorCheckParallel.txt  config3DoccAndPll.txt  config3DoccAndTex.txt  config3Doccupancy.txt  config3Dparallel.txt  config3DpllAndTex.txt  config3Dtexture.txt  config3d1.tps  config3d2.tps  config3d3.tps  config3d4.tps  config3d5.tps
configurations/: config1.tps  config2.tps  config3.tps  config4.tps  configExample.tps
realConfig/: config00.txt  config10.txt  config20.txt  config30.txt  config40.txt  config50.txt  config60.txt  config70.txt  config80.txt  config90.txt  errorCheck.txt  realConfig.txt
scripts/: generateImageForTest.sh  generateTestImage.py
src/: main.cpp  main.cxx
src/feature/: featuredetector.h  featuregenerator.cpp  featuregenerator.h  sift.cpp  sift.h  surf.cpp  surf.h
src/image/: image.cpp  image.h  imagedata.cpp  imagedata.h  imagedeformation.cxx  imagedeformation.h  imagehandler.h  itkimagehandler.cpp  itkimagehandler.cxx  itkimagehandler.h  opcvimagehandler.cpp  opcvimagehandler.cxx  opcvimagehandler.h
src/linearsystem/: armalinearsystems.cpp  armalinearsystems.h  cplinearsystems.cpp  cplinearsystems.h  cudalinearsystems.cpp  cudalinearsystems.h
src/tps/: basictps.cpp  basictps.h  cudatps.cpp  cudatps.h  cutps.cu  cutps.h  paralleltps.cpp  paralleltps.h  tps.h
src/utils/: configuration.cpp  configuration.h  controller.cpp  controller.h  cudamemory.cpp  cudamemory.cxx  cudamemory.h  globalconfiguration.cpp  globalconfiguration.h  instanceconfiguration.cpp  instanceconfiguration.h  runinstance.cpp  runinstance.h
